Revert "fix issue in operator"

--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "browserify": "*",
+    "browserify":"*",
     "envify": "^1.2.1",
     "es6-promise": "*",
     "fuzzy": "^0.1.0",
-    "griddle-callback": "0.2.0",
-    "griddle-react": "0.2.4",
-    "gulp": "^4.0.0",
+    "gulp": "*",
     "gulp-browserify": "*",
-    "gulp-concat": "*",
     "gulp-uglify": "*",
     "gulp-util": "*",
+    "gulp-concat": "*",
     "gulp-watch": "*",
-    "moment": "*",
     "react": "*",
     "react-async": "^2.0.1",
-    "react-bootstrap": "*",
+    "moment": "*",
+    "tether": "*",
     "react-onclickoutside": "*",
     "reactify": "git://github.com/andreypopp/reactify.git#v0.16.0",
     "reqwest": "*",
-    "tether": "*",
+    "griddle-react": "0.2.4",
+    "griddle-callback": "0.2.0",
+    "react-bootstrap": "*",
     "vinyl-source-stream": "*",
     "watchify": "*"
   },
